fix for vertical scroll on mobile touch

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -299,6 +299,7 @@ tbody.trail-table tr:nth-child(2n-1) {
 }
 
 table.table {
+	-webkit-overflow-scrolling: touch;
 	th {
 		font-weight: 100;
 	}
